--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>yanxuan</title>
+    <meta name="viewport" content="width=device-width,initial-scale=0.5">
+    <title>yanxuan-myself</title>
+    <link rel="stylesheet" href="/static/css/reset.css">
+    <link rel="stylesheet" href="/static/css/swiper.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1041568_3hnz6mqeiw7.css">
   </head>
+
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+  <script type="text/javascript">
+
+
+  </script>
   </body>
 </html>
